@@ -1,0 +1,10 @@
+name: 'Generate next build number'
+description: 'Generate next build number'
+
+outputs:
+  build-number:
+    description: 'Generated build number'
+
+runs:
+  using: 'node12'
+  main: 'build-number.js'
