@@ -7,6 +7,7 @@ cmake_minimum_required (VERSION 3.4)
 set (SYNERGY_VERSION_MAJOR 1)
 set (SYNERGY_VERSION_MINOR 13)
 set (SYNERGY_VERSION_PATCH 0)
+set (SYNERGY_VERSION_BUILD 1)
 set (SYNERGY_VERSION_STAGE "rc2")
 
 #
@@ -53,20 +54,12 @@ else()
 endif()
 
 if (DEFINED ENV{BUILD_NUMBER})
-    set (SYNERGY_BUILD_NUMBER $ENV{BUILD_NUMBER})
-else()
-    set (SYNERGY_BUILD_NUMBER 1)
+    set (SYNERGY_VERSION_BUILD $ENV{BUILD_NUMBER})
 endif()
 
 string (TIMESTAMP SYNERGY_BUILD_DATE "%Y%m%d" UTC)
 set (SYNERGY_SNAPSHOT_INFO ".${SYNERGY_VERSION_STAGE}.${SYNERGY_REVISION}")
-
-if (SYNERGY_VERSION_STAGE STREQUAL "snapshot")
-    set (SYNERGY_VERSION_TAG "${SYNERGY_VERSION_STAGE}.b${SYNERGY_BUILD_NUMBER}-${SYNERGY_REVISION}")
-else()
-    set (SYNERGY_VERSION_TAG "${SYNERGY_VERSION_STAGE}")
-endif()
-
+set (SYNERGY_VERSION_TAG "${SYNERGY_VERSION_STAGE}.b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}")
 set (SYNERGY_VERSION "${SYNERGY_VERSION_MAJOR}.${SYNERGY_VERSION_MINOR}.${SYNERGY_VERSION_PATCH}")
 set (SYNERGY_VERSION_STRING "${SYNERGY_VERSION}-${SYNERGY_VERSION_TAG}")
 message (STATUS "Full Synergy version string is '" ${SYNERGY_VERSION_STRING} "'")
@@ -75,7 +68,7 @@ add_definitions (-DSYNERGY_VERSION="${SYNERGY_VERSION}")
 add_definitions (-DSYNERGY_VERSION_STRING="${SYNERGY_VERSION_STRING}")
 add_definitions (-DSYNERGY_REVISION="${SYNERGY_REVISION}")
 add_definitions (-DSYNERGY_BUILD_DATE="${SYNERGY_BUILD_DATE}")
-add_definitions (-DSYNERGY_BUILD_NUMBER=${SYNERGY_BUILD_NUMBER})
+add_definitions (-DSYNERGY_VERSION_BUILD=${SYNERGY_VERSION_BUILD})
 
 if (SYNERGY_DEVELOPER_MODE)
     add_definitions (-DSYNERGY_DEVELOPER_MODE=1)
